[package]
name = "compress_history"
version = "0.1.0"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"
description = "delete unnecessary history"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
directories = "2.0.2"
log = "0.4.8"
env_logger = "0.7.1"
