[package]
name = "compress_history"
version = "0.1.2"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"
description = "delete unnecessary history"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/compress_history/"
homepage = "https://crates.io/crates/compress_history"
repository = "https://github.com/Toru3/compress_history"
readme = "README.md"
keywords = ["shell", "history", "arrange"]
categories = ["command-line-utilities", "command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
directories = "2.0.2"
log = "0.4.8"
env_logger = "0.7.1"
