[package]
name = "compress_history"
version = "0.2.0"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"
description = "delete unnecessary history"
license = "AGPL-3.0-or-later"
documentation = "https://docs.rs/compress_history/"
homepage = "https://crates.io/crates/compress_history"
repository = "https://gitlab.com/Toru3/compress_history"
readme = "README.md"
keywords = ["shell", "history", "arrange"]
categories = ["command-line-utilities", "command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
directories = "3.0.2"
log = "0.4.8"
env_logger = "0.9.0"
